<resources>
    <string name="app_name">Drunk-O-Meter</string>
    <string name="question_1">Are you drunk?</string>
    <string name="button_yes">Y E S</string>
    <string name="button_no">N O</string>
    <string name="Timer">00:00</string>
    <string name="game_but1">1</string>
    <string name="game_but2">2</string>
    <string name="game_but3">3</string>
    <string name="game_but4">4</string>
    <string name="game_but5">5</string>
    <string name="textView1"> </string>
    <string name="button_start">start</string>
    <string name="textView2">Rules of this game</string>
    <string name="textView3">1. Hit the button \n\n 2. Hit the rest of the button according to the number shown \n\n 3. Do it in ascending order</string>
    <string name="textView_title">Selecting drinks</string>
    <string name="Drinks">Beer\n Cider\n Wine\n Champagne\n Vodka\n Whisky \n Rum\n Cocktails\n Liquors\n Japanese Sake</string>
    <string name="textViewDrink">textViewDrink</string>
    <string name="textViewNumberOfDrinks">0</string>
    <string name="button_add">ADD</string>
    <string name="button_less">LESS</string>
    <string name="save_drinks">Save drinks</string>
    <string name="textview">0</string>
    <string name="next">Next</string>
    <string name="only_from_the_last_5_hours_once_added_it_cant_be_removed_press_back_to_add_other_drinks">Scroll and select all the drinks that you\'ve had. When done with adding all drinks press NEXT"</string>
    <string name="insert_drinks">INSERT DRINKS</string>
    <string name="tvTimer">0</string>
    <string name="textViewScore">0</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="textView4">TextView4</string>
    <string name="score">SCORE</string>
    <string name="back">BACK</string>
    <string name="your_score">YOUR SCORE NOW:</string>

    <string-array name="Integers">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
    </resources>